<resources>

    <!--Defaults-->
    <string name="sth_went_wrong">Please try again, something went wrong..</string>
    <string name="app_name">barberise-app</string>
    <!--SignUp activity-->
    <string name="sign_up">Login</string>
    <string name="continue_guest">Skip ›</string>
    <string name="save">Save</string>
    <string name="phone_no">Your phone number here</string>
    <string name="send">Send</string>
    <string name="im_barber">I\'m barber ›</string>

    <!--SMS activity-->
    <string name="welcome">Hey there
    , welcome back</string>

    <string name="phone" translatable="false">phone number</string>
    <string name="code" translatable="false">Enter code</string>
    <string name="verify" translatable="false">Verify</string>
    <!--Home Fragment-->
    <string name="search">Search</string>
    <string name="all">All</string>

    <!--Profile Fragment-->
    <string name="partnerprofile">Partner profile</string>
    <string name="register_code">Registration code</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="aboutus">About us</string>
    <string name="help">Help</string>
    <string name="your_name">Your name</string>

    <!--Calendar Fragment-->
    <string name="my_reservations">My reservations</string>
    <string name="next">Oncoming event</string>
    <string name="list_all">See all oncoming reservations</string>

    <!--Favorite Fragment-->
    <string name="favorite">Favorite</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="recommendedItems">Recommended</string>
    <string name="ratedItems">Best Rated</string>
    <string name="availableToday">Available Today</string>
    <string name="youremail_gmail_com" translatable="false">youremail@gmail.com</string>

    <!--Partner Profile-->
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="picture_hint">Choose your profile picture by clicking on the gray area above</string>
    <string name="business_name">Name of the shop</string>
    <string name="name_reminder">This name will be displayed in the app</string>
    <string name="phone_reminder">This will be your contact phone number</string>
    <string name="email_reminder">This will be your contact email</string>
    <string name="address_reminder">This will be your address displayed in app</string>
    <string name="address_format">Street no., City, State</string>
    <string name="check_info">Please, make sure that all contact information is valid!</string>
    <string name="my_profile">My profile</string>
    <string name="support">Contact support ›</string>
    <string name="logout">LogOut</string>

    <!--PromoCode-->
    <string name="promo_code">promo code</string>
    <string name="use">Use</string>
    <string name="invalid_code">Registration code is invalid</string>

    <!--ProfileSettings-->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_acc">Delete account</string>
    <string name="data_update">Data updated successfully</string>
    <string name="data_update_error">Couldn\'t update data</string>

    <!--Support Contact-->
    <string name="contact_us">Contact us directly via ticket!</string>
    <string name="your_message">Your message..</string>
    <string name="we_will_reach">We\'ll get back to you by email</string>
    <string name="message_success">Your message was successfully sent!</string>

    <!--App Settings-->
    <string name="switch_lang">Switch language ></string>
    <string name="news_sub">Newsletter and promotional offers ></string>
    <string name="error_lang">This functionality is currently unavailable. App uses default machine language,
        in order to switch language, proceed to phone settings. Sorry for discomfort.</string>
    <string name="news_error">We\'ll send the newsletters to your email address.</string>

    <!--AboutApp-->
    <string name="version">Version 0.0.1A</string>
    <string name="rate_app">Rate app ></string>
    <string name="instagram">Support us on Instagram ></string>
    <string name="terms">Legal information ></string>
    <string name="contact">Contact ></string>
    <string name="rate_warn">This will be implemented when we\'ll upload app to PlayStore</string>
    <string name="instagram_warn">We currently do not have Instagram</string>
    <string name="terms_warn">Contact App distributor for Legal-Terms</string>
    <string name="contact_warn">filip.rzuhovsky@gmail.com</string>

    <!--User Registration-->
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>

    <string name="Monday_hours" translatable="false">9:00-17:00</string>
    <string name="Tuesday_hours" translatable="false">9:00-17:00</string>
    <string name="Wednesday_hours" translatable="false">9:00-17:00</string>
    <string name="Thursday_hours" translatable="false">9:00-17:00</string>
    <string name="Friday_hours" translatable="false">9:00-17:00</string>
    <string name="Saturday_hours" translatable="false">---</string>
    <string name="Sunday_hours" translatable="false">---</string>

    <string name="default_time">Keep the default opening hours</string>
    <string name="save_changes">Save changes ›</string>

    <string name="set_opening_hours">Set up opening hours ›</string>
    <string name="confirm">Confirm</string>

    <string name="services_intro">Here, you can add categories and subcategories</string>
    <string name="services_explanation">We\'ll start by selecting how many services and how many subservices you will provide</string>
    <string name="num_of_services">Number of services</string>
    <string name="num_of_services_example">(Example : If "Short hair" and "Long hair" say "2")</string>
    <string name="num_of_subservices">Number of sub-services of each service</string>
    <string name="num_of_subservices_example">(Example : If "Short hair" has 2 sub-services ("Scissors cut and Razor cut") say "2")</string>
    <string name="set_categories">Set up your services ›</string>
    <string name="service_type">Type of service</string>
    <string name="service">Service</string>
    <string name="service_description">Description of service</string>
    <string name="price">price</string>

    <string name="check_hours">Please, make sure that opening hours for each day are correctly configured</string>
    <string name="default_time_hint">(Mo – Fri : 9:00 – 17:00 Sa – Sun : –––)</string>
    <string name="default_time_warning">This will erase all your configured opening hours, if you click on Save changes ›</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="reset_pass">Reset password</string>
    <string name="back_to_login">Go back to login</string>
    <string name="empty_email">Email must not be empty..</string>
    <string name="valid_email">Please input valid email..</string>
    <string name="check_email">Please check your email to reset password</string>


    <!--Chosen user-->
    <string name="contact_info">Contact information ›</string>
    <string name="about_us">About us ›</string>
    <string name="services">Our services :</string>

    <!--Reservation-->
    <string name="choose_category">Choose category</string>
    <string name="choose_service">Choose service</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="save_date">Save date ›</string>
    <string name="reserve">Reserve</string>
    <string name="reservation_warn">Please make sure that all reservation fields are valid</string>
    <string name="reservation_success">Your reservation is successful.</string>
    <string name="reservation_thanks">Thank you for your reservation !</string>
    <string name="reservation_notification">We\'ll send confirmation of the reservation
        to your email.</string>
    <string name="check_reservation">You can check your reservation clicking here</string>
    <string name="no_hours_available">Ups, seems like there are no any available times.</string>

    <!--Reservation card-->
    <string name="rate">Rate</string>
    <string name="thanks_for_rating">Thanks for your feedback!</string>

    <!--Contact Info-->
    <string name="opening_hours">Opening hours</string>
    <string name="tel_number">Phone number :</string>
    <string name="email" translatable="false">Email :</string>
    <!--Cancel Reservation Dialog-->
    <string name="cancel_reservation_header">Cancel reservation</string>
    <string name="cancel_reservation">Are you sure you want to discard this reservation?</string>
    <string name="go_back">Go back</string>
    <string name="cancel">Cancel</string>

    <!--New User Activity-->
    <string name="set_name">Name must be set</string>
    <string name="set_surname">Surname must be set</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>