<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".navigation.profile.ConfigureServicesActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/sen"
        android:text="@string/services_intro"
        android:ellipsize="end"
        android:singleLine="false"
        android:maxWidth="150dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inConfRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:listitem="@layout/conf_services_card" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_button_25dp"
        android:fontFamily="@font/sen"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/noOfSubServicesEditText"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/saveSettingsButton"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_corners_stroke"
        android:fontFamily="@font/sen_bold"
        android:gravity="center"
        android:text="@string/save"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ellipsize="end"
        android:maxWidth="300dp"
        android:singleLine="false"
        android:text="@string/services_explanation"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/noOfServicesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_no_underline"
        android:hint="@string/num_of_services"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <EditText
        android:id="@+id/noOfSubServicesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/edit_text_no_underline"
        android:hint="@string/num_of_subservices"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/noOfServicesEditText"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_services_example"
        app:layout_constraintStart_toStartOf="@+id/noOfServicesEditText"
        app:layout_constraintTop_toBottomOf="@+id/noOfServicesEditText" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_subservices_example"
        android:ellipsize="end"
        android:maxWidth="300dp"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="@+id/noOfSubServicesEditText"
        app:layout_constraintTop_toBottomOf="@+id/noOfSubServicesEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>