<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.ResetPasswordActivity">

    <Button
        android:id="@+id/buttonResetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/round_shape_shadows"
        android:backgroundTint="#FF7235"
        android:fontFamily="@font/sen_bold"
        android:text="@string/reset_pass"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTextResetPass"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextResetPass"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextResetPass" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditTextResetPass"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/rounded"
        android:backgroundTint="#D9D9D9"
        android:ems="10"
        android:fontFamily="@font/sen"
        android:hint="@string/youremail_gmail_com"
        android:paddingStart="20dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#BF000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarResetPass"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonResetPass"
        app:layout_constraintStart_toStartOf="@+id/buttonResetPass"
        app:layout_constraintTop_toBottomOf="@+id/buttonResetPass" />

    <TextView
        android:id="@+id/backToLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:alpha="100"
        android:fontFamily="@font/sen"
        android:text="@string/back_to_login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>